--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,13 @@ cmake_minimum_required(VERSION 3.0)
 project(lem_in)
 
 #set(GCC_FLAGS "-Wall -Werror -Wextra")
+#gcc src/main.c src/read_stdin.c -I./inc/ -I./libft/includes libft/libft.a -o t
 
-file(GLOB SRC_FILLER "src/*.c")
+file(GLOB SRC_LEMIN "src/*.c")
 
 add_subdirectory(libft)
 #add_definitions(${GCC_FLAGS})
-add_executable(lem_in ${SRC_FILLER})
+add_executable(lem_in ${SRC_LEMIN})
 
 target_include_directories(lem_in PUBLIC inc)
 target_link_libraries(lem_in PRIVATE ft)
