added direct path support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,13 @@ cmake_minimum_required(VERSION 3.0)
 
 project(lem_in)
 
-#set(GCC_FLAGS "-Wall -Werror -Wextra")
-#gcc src/main.c src/get_fd_buffer.c -I./inc/ -I./c/includes c/c.a -o t
+set(GCC_FLAGS "-Wall -Werror -Wextra")
 
-file(GLOB SRC_LEMIN "src/*.c")
+file(GLOB SRC_LENIN "src/*.c")
 
 add_subdirectory(libft)
-#add_definitions(${GCC_FLAGS})
-add_executable(lem_in ${SRC_LEMIN})
+add_definitions(${GCC_FLAGS})
+add_executable(lem_in ${SRC_LENIN})
 
 target_include_directories(lem_in PUBLIC inc)
 target_link_libraries(lem_in PRIVATE ft)
