added loops.? files

--- a/visu/Makefile
+++ b/visu/Makefile
@@ -33,7 +33,9 @@ SOURCES =	main.c				\
 			event_handling.c	\
 			xiolin_wu.c			\
 			draw_utils.c		\
-			error_handling.c
+			error_handling.c	\
+			mouse_handling.c	\
+			loops.c
 
 OBJECTS = $(addprefix $(ODIR)/, $(SOURCES:.c=.o))
 
