--- a/visu/Makefile
+++ b/visu/Makefile
@@ -22,7 +22,22 @@ INCDIRS = $(HDIR) $(LBDIRS) $(addsuffix /includes, $(LBDIRS))
 DBCFLAGS = -Wno-error -g
 CFLAGS = -Wall -Wextra -Werror -O3 $(addprefix -I , $(INCDIRS)) $(DBCFLAGS)
 
-SOURCES =	main.c				\
+CLIPDIR = clipping
+
+CLIPPING = 	bottom.c\
+			center_p1.c\
+			center_p2.c\
+			clip_bgn.c\
+			clip_end.c\
+			left_bottom.c\
+			left_p1.c\
+			left_p2.c\
+			left_top.c\
+			top.c\
+			utils_draw_line.c
+
+SOURCES =	$(addprefix $(CLIPDIR)/, $(CLIPPING))			\
+			main.c				\
 			initialize.c		\
 			parse.c				\
 			point.c				\
@@ -52,6 +67,7 @@ $(BIN_DIR)/$(NAME): $(OBJECTS)
 
 $(ODIR):
 	mkdir -p $(ODIR)
+	mkdir -p $@/$(CLIPDIR)
 
 $(ODIR)/%.o: $(CDIR)/%.c includes/visu.h
 	$(COMPILE.c) $(OUTPUT_OPTION) $<
