--- a/visu/Makefile
+++ b/visu/Makefile
@@ -19,7 +19,7 @@ LDLIBS += $(addprefix -l , $(LBNAMES:lib%.a=%))
 
 INCDIRS = $(HDIR) $(LBDIRS) $(addsuffix /includes, $(LBDIRS))
 
-DBCFLAGS = -Wno-error -g
+# DBCFLAGS = -Wno-error -g
 CFLAGS = -Wall -Wextra -Werror -O3 $(addprefix -I , $(INCDIRS)) $(DBCFLAGS)
 
 SOURCES =	main.c				\
